これから頑張る

--- a/src/ejs/component/_c-entryBtn2.ejs
+++ b/src/ejs/component/_c-entryBtn2.ejs
@@ -1,4 +1,4 @@
 <a href="<%= link %>" class="c-entryBtn2 js-entryBtn">
-    <img src="./images/common/entry_icon.png" alt="応募する">
+    <img src="../images/common/entry_icon.png" alt="応募する">
     <p>ENTRY | 応募する<br><span>きっと見つかる君にピッタリの働き方</span></p>
 </a>
