--- a/src/ejs/project/_p-workStyle_night.ejs
+++ b/src/ejs/project/_p-workStyle_night.ejs
@@ -9,14 +9,14 @@
     <div class="p-workStyle__contents">
     <div class="p-workStyle__units">
       <div class="p-workStyle__unit">
-        <img src="images/environment/workStyle_time1630.png" alt="16:30" loading="lazy">
+        <img src="../images/environment/workStyle_time1630.png" alt="16:30" loading="lazy">
         <p class="p-workStyle__unitTitle">出社</p>
         <p class="p-workStyle__unitText"> 17:00~19:00の間で自由に出社時間を選べます。<br>
           ・点検などの準備
         </p>
       </div>
       <div class="p-workStyle__unit">
-        <img src="images/environment/workStyle_time1700.png" alt="17:00" loading="lazy">
+        <img src="../images/environment/workStyle_time1700.png" alt="17:00" loading="lazy">
         <p class="p-workStyle__unitTitle">乗務開始</p>
         <p class="p-workStyle__unitText">
           ・点検が完了次第、乗務開始です<br>
@@ -25,22 +25,22 @@
           のため、無線だけでも安定した売上を上げられます。 </p>
       </div>
       <div class="p-workStyle__unit  c">
-        <img src="images/environment/workStyle_time1700-2000.png" alt="17:00~20:00" loading="lazy">
+        <img src="../images/environment/workStyle_time1700-2000.png" alt="17:00~20:00" loading="lazy">
         <p class="p-workStyle__unitTitle">夕方のピークの時間帯</p>
         <p class="p-workStyle__unitText"> 夕方から夜にかけては、帰宅などご利用するお客様が多くいらっしゃる頑張る時間帯です。</p>
       </div>
       <div class="p-workStyle__unit">
-        <img src="images/environment/workStyle_time2100.png" alt="21:00" loading="lazy">
+        <img src="../images/environment/workStyle_time2100.png" alt="21:00" loading="lazy">
         <p class="p-workStyle__unitTitle">休憩</p>
         <p class="p-workStyle__unitText"> 休憩は合計で1時間あります。自身で調整していただけます。</p>
       </div>
       <div class="p-workStyle__unit">
-        <img src="images/environment/workStyle_time2400-2600.png" alt="24:00~26:00" loading="lazy">
+        <img src="../images/environment/workStyle_time2400-2600.png" alt="24:00~26:00" loading="lazy">
         <p class="p-workStyle__unitTitle">夜のピークの時間帯</p>
         <p class="p-workStyle__unitText"> 22:00以降は乗車賃が2割増しです。夜は大阪市内や奈良、京都までお送りするお客様も多く、道が空いているためガッツリ稼げます</p>
       </div>
       <div class="p-workStyle__unit">
-        <img src="images/environment/workStyle_time2530.png" alt="25:30" loading="lazy">
+        <img src="../images/environment/workStyle_time2530.png" alt="25:30" loading="lazy">
         <p class="p-workStyle__unitTitle">退社</p>
         <p class="p-workStyle__unitText"> 25:00~29:00(朝5:00)の間で出勤時間に応じて退社します。</p>
       </div>
@@ -51,8 +51,8 @@
       </div>
       <div class="p-calendar__contents">
         <picture class="p-calendar__calendarImg">
-          <source media="(min-width: 768px)" srcset="images/environment/workStyle__calendar_02_pc.png">
-          <img src="images/environment/workStyle__calendar_02.png" alt="夜間勤務のカレンダー" loading="lazy">
+          <source media="(min-width: 768px)" srcset="../images/environment/workStyle__calendar_02_pc.png">
+          <img src="../images/environment/workStyle__calendar_02.png" alt="夜間勤務のカレンダー" loading="lazy">
         </picture>
       </div>
       <div class="p-workStyle__points">
