--- a/src/ejs/project/_p-subMv.ejs
+++ b/src/ejs/project/_p-subMv.ejs
@@ -1,3 +1,7 @@
 <div class="p-subMV">
-    <h2 class="p-subMV__text" data-ja="社内環境">environment</h2>
+    <h2 class="p-subMV__text" data-ja="<%= subtitle %>"><%= title %></h2>
+    <picture class="p-subMv__img">
+        <source srcset="../images/<%= title %>/<%= title %>_subMV_01_pc.jpg" media="(min-width:768px)">
+        <img src="../images/<%= title %>/<%= title %>_subMV_01.jpg" alt="">
+    </picture>
 </div>
