スマホ完成

--- a/src/ejs/common/_p-footer.ejs
+++ b/src/ejs/common/_p-footer.ejs
@@ -8,14 +8,14 @@
             <div class="p-footer__btns">
                 <div class="p-footer__btn">
                     <span class="u-mobile">受付時間　平日(9:00～18:00)</span>
-                    <a href="#">
+                    <a href="tel:0729620012">
                         <img src="./images/common/tel.png" alt="072-962-0012">
                         072-962-0012
                     </a>
                     <span class="u-desktop">受付時間　平日(9:00～18:00)</span>
                 </div>
                 <div class="p-footer__btn">
-                    <a href="#">
+                    <a href="mailto:hiraokakoutuu@eos.ocn.ne.jp" target="_blank">
                         <img src="./images/common/mail.png" alt="メールでお問合せ">
                         メールでお問合せ
                     </a>
@@ -39,7 +39,7 @@
                 <a href="#">会社情報</a>
             </li>
             <li class="p-footer__link">
-                <a href="#">プライバシーポリシー</a>
+                <a href="./privacy/">プライバシーポリシー</a>
             </li>
         </ul>
         <div class="p-footer__bottom">
