--- a/src/ejs/common/_p-header.ejs
+++ b/src/ejs/common/_p-header.ejs
@@ -1,7 +1,7 @@
 <div class="p-header">
     <div class="p-header__inner l-inner">
         <h1 class="p-header__logo">
-            <a href="#">
+            <a href="./">
                 <img src="./images/common/logo.png" alt="枚岡交通株式会社">
             </a>
         </h1>
