--- a/src/ejs/component/_c-title.ejs
+++ b/src/ejs/component/_c-title.ejs
@@ -13,6 +13,11 @@
         <p class="c-title__ja"><%= subtitle %> </p>
         <h2 class="c-title__en"><%= title %></h2>
     </div>
+<% } else if ( type === "smallCenter"){ %>
+    <div class="c-title c-title--center c-title--small">
+        <p class="c-title__ja"><%= subtitle %> </p>
+        <h2 class="c-title__en"><%= title %></h2>
+    </div>
 <% } else { %>
     <div class="c-title">
         <p class="c-title__ja"><%= subtitle %> </p>
