--- a/src/ejs/environment/index.ejs
+++ b/src/ejs/environment/index.ejs
@@ -11,6 +11,11 @@
       title:'environment'
     }) %>
   </section>
+  <div class="l-breadcrumb">
+    <%- include('../project/_p-breadcrumb',{
+        page:'environment'
+    }) %> 
+  </div>
   <div class="l-environmentLinks">
     <%- include('../project/_p-environmentLinks') %>
   </div>
