--- a/src/ejs/common/_p-footer2.ejs
+++ b/src/ejs/common/_p-footer2.ejs
@@ -15,7 +15,7 @@
                     <span class="u-desktop">受付時間　平日(9:00～18:00)</span>
                 </div>
                 <div class="p-footer__btn">
-                    <a href="#">
+                    <a href="mailto:hiraokakoutuu@eos.ocn.ne.jp" target="_blank">
                         <img src="../images/common/mail.png" alt="メールでお問合せ">
                         メールでお問合せ
                     </a>
