--- a/src/ejs/concept/index.ejs
+++ b/src/ejs/concept/index.ejs
@@ -11,21 +11,24 @@
       subtitle:'コンセプト'
     }) %>
   </section>
-  <div class="l-environmentLinks">
-    <%- include('../project/_p-environmentLinks') %>
+  <div class="l-breadcrumb">
+    <%- include('../project/_p-breadcrumb',{
+        page:'concept'
+    }) %> 
   </div>
-  <section class="l-workStyle">
-    <%- include('../project/_p-workStyle_12days') %>
+  <section class="l-conceptTop">
+    <%- include('../project/_p-conceptTop') %> 
   </section>
-  <section class="l-workStyle">
-    <%- include('../project/_p-workStyle_night') %>
+  <div class="l-point">
+    <%- include('../project/_p-point') %> 
+  </div>
+  <section class="l-worklife">
+    <%- include('../project/_p-worklife') %> 
   </section>
-  <section class="l-workStyle">
-    <%- include('../project/_p-workStyle_17days') %>
+  <section class="l-strong">
+    <%- include('../project/_p-strong') %> 
   </section>
-  <section class="l-environmentMmerit">
-    <%- include('../project/_p-environmentMerit') %>
-  </section>
+  
   <div class="l-entry">
     <%- include('../project/_p-entry') %>
   </div>
