--- a/src/sass/object/component/_c-title.scss
+++ b/src/sass/object/component/_c-title.scss
@@ -26,6 +26,13 @@
     font-size: rem(14);
 }
 
+.c-title--small .c-title__ja {
+    font-size: rem(12);
+    @include mq(md) {
+        font-size: rem(18);
+    }
+}
+
 .c-title__en {
     font-family: $en-font;
     font-size: rem(50);
@@ -43,6 +50,14 @@
     @include mq(md) {
         text-align: center;
         font-size: rem(80);
+    }
+}
+
+.c-title--small .c-title__en {
+    font-size: rem(35);
+    margin-top: rem(5);
+    @include mq(md) {
+        font-size: rem(50);
     }
 }
 
