--- a/src/sass/object/project/_p-header.scss
+++ b/src/sass/object/project/_p-header.scss
@@ -7,6 +7,7 @@
     width: 100%;
     height: rem(67.5);
     z-index: 1001;
+    background-color: $white;
 
     @include mq(md) {
         height: rem(200);
