--- a/src/ejs/common/_p-drawer2.ejs
+++ b/src/ejs/common/_p-drawer2.ejs
@@ -6,32 +6,32 @@
     </div>
     <ul class="p-drawer__links">
         <li class="p-drawer__link">
-            <a href="#">CONCEPT　/　<span>コンセプト</span></a>
+            <a href="../concept/">CONCEPT　/　<span>コンセプト</span></a>
         </li>
         <li class="p-drawer__link">
-            <a href="#">TRAINIING　/　<span>研修</span></a>
+            <a href="../training/">TRAINIING　/　<span>研修</span></a>
         </li>
         <li class="p-drawer__link">
-            <a href="#">DRIVERS　/　<span>先輩紹介</span></a>
+            <a href="../drivers/">DRIVERS　/　<span>先輩紹介</span></a>
         </li>
         <li class="p-drawer__link">
-            <a href="#">MESSAGE　/　<span>社長挨拶</span></a>
+            <a href="../message/">MESSAGE　/　<span>社長挨拶</span></a>
         </li>
         <li class="p-drawer__link">
-            <a href="#">ENVIRONMENT　/　<span>仕事環境</span></a>
+            <a href="../environment/">ENVIRONMENT　/　<span>仕事環境</span></a>
         </li>
         <li class="p-drawer__link">
-            <a href="#">NEWS　/　<span>ニュース</span></a>
+            <a href="../news/">NEWS　/　<span>ニュース</span></a>
         </li>
         <li class="p-drawer__link">
-            <a href="#">RECRUIT　/　<span>求人概要</span></a>
+            <a href="../recruit/">RECRUIT　/　<span>求人概要</span></a>
         </li>
         <li class="p-drawer__link">
-            <a href="#">CAM-BUS　/　<span>キャンバスについて</span></a>
+            <a href="../cambus/">CAM-BUS　/　<span>キャンバスについて</span></a>
         </li>
     </ul>
     <div class="p-drawer__entry c-entryBtn js-entryBtn">
-        <a href="#">
+        <a href="../entry/">
             <img src="../images/common/entry_icon.png" alt="応募する">
             <p>ENTRY | 応募する</p>
         </a>
