--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -2,7 +2,7 @@
 <html lang="ja">
 <%- include('./common/_head') %>
   <body>
-    <header class="l-header">
+    <header class="l-header l-header--top">
       <%- include('./common/_p-header') %> 
     </header>
     <main>
