--- a/src/ejs/project/_p-application.ejs
+++ b/src/ejs/project/_p-application.ejs
@@ -15,13 +15,13 @@
                 <dt>勤務時間</dt>
                 <dd>
                     1ヶ月単位の変形労働時間（週平均実働40時間以内）<br>
-                    <strong>【隔日勤務】</strong><br>
+                    <strong>【隔日勤務】</strong><br class="u-mobile">
                     例 / 出社：AM8:00 / 退社：AM2:00 / 月12日勤務<br>
-                    <strong>【2勤1休制】</strong><br>
+                    <strong>【2勤1休制】</strong><br class="u-mobile">
                     例 / 出社：AM8:00 / 退社：AM2:00 / 月12日勤務<br>
-                    <strong>【夜勤】</strong><br>
+                    <strong>【夜勤】</strong><br class="u-mobile">
                     例 / 出社：PM5:00 / 退社：AM1:00 / 月24日勤務<br>
-                    <strong>【昼勤】</strong><br>
+                    <strong>【昼勤】</strong><br class="u-mobile">
                     例 / 出社：AM7:00 / 退社：PM3:00 / 月24日勤務
                 </dd>
             </dl>
