--- a/src/ejs/project/_p-strong.ejs
+++ b/src/ejs/project/_p-strong.ejs
@@ -7,15 +7,15 @@
         </div>
         <div class="p-strong__title">
             <%- include('../component/_c-title2',{
-                title:'東大阪市を中心に移動を通じて<br>安全・安心を提供します！'
+                title:'東大阪市を中心に移動を通じて<br class="u-mobile">安全・安心を提供します！'
             }) %> 
         </div>
         <p class="p-strong__text">
-            枚岡交通は東大阪密着でお客様の足として、68年営業を続けてきました。今後も地域の皆様に貢献できるよう誠心誠意営業を続けてまいります。
+            枚岡交通は東大阪密着でお客様の足として、68年営業を続けてきました。<br class="u-desktop">今後も地域の皆様に貢献できるよう誠心誠意営業を続けてまいります。
         </p>
         <div class="p-strong__content">
             <h3 class="p-strong__content-title">
-                枚岡交通で働く<br><span>3</span>つの強み
+                枚岡交通で働く<br class="u-mobile"><span>3</span>つの強み
             </h3>
             <ul class="p-strong__items">
                 <li class="p-strong__item">
