--- a/src/ejs/project/_p-worklife.ejs
+++ b/src/ejs/project/_p-worklife.ejs
@@ -11,9 +11,9 @@
             }) %> 
         </div>
         <p class="p-worklife__text">
-            仕事、プライベートどちらも充実させる<br>働き方・生き方のことを意味します。<br>
-            生活の充実によって、<br>
-            仕事の効率・パフォーマンスが向上し、<br>
+            仕事、プライベートどちらも充実させる<br class="u-mobile">働き方・生き方のことを意味します。<br>
+            生活の充実によって、<br class="u-mobile">
+            仕事の効率・パフォーマンスが向上し、<br class="u-mobile">
             成果を出せて好循環が生まれます
         </p>
         <div class="p-workelife__content">
