--- a/src/ejs/recruit/index.ejs
+++ b/src/ejs/recruit/index.ejs
@@ -19,7 +19,7 @@
         <section class="l-content">
             <%- include('../project/_p-content',{
                 bigText:'',
-                text:'ITの発達により交通産業に変革が起きている今、枚岡交通はより積極的にアクションを起こしていきます。経験者/未経験社は問いません。枚岡交通で一緒に働きませんか？？'
+                text:'ITの発達により交通産業に変革が起きている今、枚岡交通はより積極的にアクションを起こしていきます。<br class="u-desktop">経験者/未経験社は問いません。枚岡交通で一緒に働きませんか？？'
             }) %> 
         </section>
         <section class="l-application">
