--- a/src/sass/object/project/_p-breadcrumb.scss
+++ b/src/sass/object/project/_p-breadcrumb.scss
@@ -3,9 +3,14 @@
 .p-breadcrumb {
     padding: rem(20) 0;
     background-color: #eeeeef;
+    @include mq(md) {
+      padding: rem(25) 0;
+    }
 }
 .p-breadcrumb__inner.l-inner {
-
+  @include mq(md) {
+    max-width: rem(1550);
+  }
 }
 .p-breadcrumb li {
     display: inline;
@@ -22,8 +27,16 @@
 .p-breadcrumb li a {
     font-size: rem(14);
     color:#231815;
+
+    @include mq(md) {
+      font-size: rem(20);
+    }
 }
 .p-breadcrumb li span {
     font-size: rem(14);
     color:#231815;
+
+    @include mq(md) {
+      font-size: rem(20);
+    }
 }
