--- a/src/sass/object/project/_p-conceptTop.scss
+++ b/src/sass/object/project/_p-conceptTop.scss
@@ -4,14 +4,19 @@
 
 }
 
-.p-conceptTop__inner {
-
+.p-conceptTop__inner.l-inner {
+    max-width: rem(1460);
 }
 
 .p-conceptTop__title {
     font-size: rem(44);
     text-align: center;
     line-height: calc(111/92);
+
+    @include mq(md) {
+        font-size: rem(110);
+        font-feature-settings: "palt";
+    }
 }
 
 .p-conceptTop__wrap {
@@ -20,6 +25,7 @@
     margin-top: rem(72);
     @include mq(md) {
         grid-template-columns: repeat(2,1fr);
+        margin-top: rem(176);
     }
 }
 
@@ -27,7 +33,9 @@
     font-size: rem(15);
     line-height: 3;
     @include mq(md) {
-
+        font-size: rem(24);
+        font-feature-settings: "palt";
+        padding-right: rem(144);
     }
 }
 
