--- a/src/ejs/privacy/index.ejs
+++ b/src/ejs/privacy/index.ejs
@@ -6,11 +6,11 @@
     </header>
     <main>
         <section class="l-subMv">
-            <div class="p-subMV">
-                <h2 class="p-subMV__text" data-ja="プライバシーポリシー">PRIVACY POLICY</h2>
+            <div class="p-subMv">
+                <h2 class="p-subMv__text" data-ja="プライバシーポリシー">PRIVACY POLICY</h2>
                 <picture class="p-subMv__img">
-                    <source srcset="../images/privacy/privacy_subMV_01_pc.jpg" media="(min-width:768px)">
-                    <img src="../images/privacy/privacy_subMV_01.jpg" alt="">
+                    <source srcset="../images/privacy/privacy_subMv_01_pc.jpg" media="(min-width:768px)">
+                    <img src="../images/privacy/privacy_subMv_01.jpg" alt="">
                 </picture>
             </div>
         </section>
