--- a/src/ejs/project/_p-company.ejs
+++ b/src/ejs/project/_p-company.ejs
@@ -48,7 +48,9 @@
                     「大阪モノづくり観光ナビ」協賛</dd>
             </dl>
             <div class="p-company__map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.780339642448!2d135.61303895059729!3d34.68549298034239!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x600120147c30b817%3A0x35e3f99bea969413!2z5p6a5bKh5Lqk6YCa5qCq5byP5Lya56S-!5e0!3m2!1sja!2sjp!4v1667322521544!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="p-company__map-inner">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.780339642448!2d135.61303895059729!3d34.68549298034239!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x600120147c30b817%3A0x35e3f99bea969413!2z5p6a5bKh5Lqk6YCa5qCq5byP5Lya56S-!5e0!3m2!1sja!2sjp!4v1667322521544!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
         </div>
     </div>
