--- a/src/ejs/project/_p-message.ejs
+++ b/src/ejs/project/_p-message.ejs
@@ -1,27 +1,27 @@
 <div class="p-message">
     <div class="p-message__inner l-inner">
         <h2 class="p-message__bigText">
-            タクシーは<br>時間を作りやすい<br>お仕事です
+            タクシーは<br class="u-mobile">時間を作りやすい<br class="u-mobile">お仕事です
         </h2>
         <ul class="p-message__units">
             <li class="p-message__unit">
                 <p class="p-message__unit-text">
-                    働き方が数種類あり、働く人の希望<br>に応じたスタイルで働けます。
+                    働き方が数種類あり、働く人の希望<br class="u-mobile">に応じたスタイルで働けます。
                 </p>
             </li>
             <li class="p-message__unit">
                 <p class="p-message__unit-text">
-                    時間を作りやすいお仕事のため、<br>プライベートを充実させる<br>ことができます。
+                    時間を作りやすいお仕事のため、<br class="u-mobile">プライベートを充実させる<br class="u-mobile">ことができます。
                 </p>
             </li>
             <li class="p-message__unit">
                 <p class="p-message__unit-text">
-                    時間を作りやすいお仕事のため、<br>プライベートを充実させる<br>ことができます。
+                    家族や友人との時間を<br class="u-mobile">たくさん作れます。
                 </p>
             </li>
         </ul>
         <p class="p-message__text">
-            平素は枚岡交通株式会社をご利用頂きまして誠にありがとうございます。旅客自動運送事業（タクシー業）の許可を昭和29年より約68年間の長い間、地域を中心にお客様に支えられ営業をおこなって参りました。タクシーは意外と知られていないのですが約100年あるお仕事です。よくイメージの湧きにくいお仕事という言葉を耳にします。このページをご覧になられた全ての世代の方たちに知って頂きたく思います。人と人。地域と地域をつなぐ大切な仕事を時間の充実を図り、一緒に弊社で働いて頂きたく皆様のご応募をお待ちしております。最後までご一読いただき有難うございました。<br>
+            平素は枚岡交通株式会社をご利用頂きまして誠にありがとうございます。旅客自動運送事業（タクシー業）の許可を昭和29年より約68年間の長い間、地域を中心にお客様に支えられ営業をおこなって参りました。タクシーは意外と知られていないのですが約100年あるお仕事です。よくイメージの湧きにくいお仕事という言葉を耳にします。このページをご覧になられた全ての世代の方たちに知って頂きたく思います。人と人。地域と地域をつなぐ大切な仕事を時間の充実を図り、一緒に弊社で働いて頂きたく皆様のご応募をお待ちしております。最後までご一読いただき有難うございました。
             <span>代表取締役　<strong>今川 哲嗣</strong></span>
         </p>
     </div>
