--- a/src/ejs/project/_p-seniorItem.ejs
+++ b/src/ejs/project/_p-seniorItem.ejs
@@ -6,14 +6,14 @@
             </picture>
             <div class="p-seniorItem__content">
                 <p class="p-seniorItem__bigText">
-                    海外旅行にも行ける<br>働き方です！   
+                    海外旅行にも行ける<br class="u-mobile">働き方です！   
                 </p>
                 <div class="p-seniorItem__wrap">
                     <div class="p-seniorItem__info">
                         <p class="p-seniorItem__year">2019年 中途入社</p>
                         <p class="p-seniorItem__position">ドライバー</p>
                         <p class="p-seniorItem__name">
-                            佐々木 隆太<span>SASAKI RYUTA</span> 
+                            佐々木 隆太<br><span>SASAKI RYUTA</span> 
                         </p>
                         <p class="p-seniorItem__old">24歳 / 入社3年目</p>
                     </div>
@@ -26,7 +26,7 @@
         <ul class="p-seniorItem__lists">
             <li class="p-seniorItem__list">
                 <h3 class="p-seniorItem__list-title">
-                    入社してから変わった<br>良かったところ
+                    入社してから変わった<br class="u-mobile">良かったところ
                 </h3>
                 <p class="p-seniorItem__list-text">
                     プライベート面は、休みが増えたことで生活スタイルが変わり、趣味に時間を作れるようになりました。仕事面では、完全歩合制なので売上に対して頭を使うようになりました。1日の売上目標を立てて、どうすれば目標を達成できるのか、時間帯によって通る道を変えたり、工夫するようになりました。
@@ -90,14 +90,14 @@
             </picture>
             <div class="p-seniorItem__content">
                 <p class="p-seniorItem__bigText">
-                    親孝行ができる<br>お仕事です！ 
+                    親孝行ができる<br class="u-mobile">お仕事です！ 
                 </p>
                 <div class="p-seniorItem__wrap">
                     <div class="p-seniorItem__info">
                         <p class="p-seniorItem__year">2021年 中途入社</p>
                         <p class="p-seniorItem__position">ドライバー</p>
                         <p class="p-seniorItem__name">
-                            山戸 悠水<span>YAMATO YUMI</span> 
+                            山戸 悠水<br><span>YAMATO YUMI</span> 
                         </p>
                         <p class="p-seniorItem__old">24歳 / 入社1年目</p>
                     </div>
@@ -110,7 +110,7 @@
         <ul class="p-seniorItem__lists">
             <li class="p-seniorItem__list">
                 <h3 class="p-seniorItem__list-title">
-                    入社してから変わった<br>良かったところ
+                    入社してから変わった<br class="u-mobile">良かったところ
                 </h3>
                 <p class="p-seniorItem__list-text">
                     休みが13日あるので、年に1回行けたら良かった家族旅行が、しょっちゅう行けるようになり、親孝行ができるようになりました。<br>
@@ -183,14 +183,14 @@
             </picture>
             <div class="p-seniorItem__content">
                 <p class="p-seniorItem__bigText">
-                    新しいことに<br>チャレンジするための<br>時間ができます！
+                    新しいことに<br class="u-mobile">チャレンジするための<br>時間ができます！
                 </p>
                 <div class="p-seniorItem__wrap">
                     <div class="p-seniorItem__info">
                         <p class="p-seniorItem__year">2019年 中途入社</p>
                         <p class="p-seniorItem__position">ドライバー</p>
                         <p class="p-seniorItem__name">
-                            矢野 雅也<span>MASAYA YANO</span> 
+                            矢野 雅也<br><span>MASAYA YANO</span> 
                         </p>
                         <p class="p-seniorItem__old">24歳 / 入社3年目</p>
                     </div>
@@ -203,7 +203,7 @@
         <ul class="p-seniorItem__lists">
             <li class="p-seniorItem__list">
                 <h3 class="p-seniorItem__list-title">
-                    入社してから変わった<br>良かったところ
+                    入社してから変わった<br class="u-mobile">良かったところ
                 </h3>
                 <p class="p-seniorItem__list-text">
                     入社してからは、ちょうどコロナ禍でしたので本当に大変でした。お客様が居ないなか、どう売上を上げるかと創意工夫してチャレンジする経験ができました。新規部署に異動してからは、今までの仕事ではお会いできないような方々と出会えたり、本当に貴重な経験をさせて頂いてます。
