--- a/src/sass/object/component/_c-blackTitle.scss
+++ b/src/sass/object/component/_c-blackTitle.scss
@@ -11,4 +11,8 @@
     font-size: rem(14);
     background-color: $black;
     border-radius: rem(20);
+
+    @include mq(md) {
+        font-size: rem(22);
+    }
 }
