--- a/src/sass/object/project/_p-company.scss
+++ b/src/sass/object/project/_p-company.scss
@@ -4,8 +4,10 @@
 
 }
 
-.p-company__inner {
-
+.p-company__inner.l-inner {
+    @include mq(md) {
+        max-width: rem(1550);
+    }
 }
 
 .p-comapny__title {
@@ -17,6 +19,10 @@
     border-bottom: 2px solid $black;
     margin-top: rem(25);
     padding-bottom: rem(22);
+
+    @include mq(md) {
+        position: relative;
+    }
 }
 
 .p-company__info dl {
@@ -24,6 +30,11 @@
     align-items: flex-start;
     padding: rem(20) rem(22);
     border-top: 1px solid #acacac;
+
+    @include mq(md) {
+        width: calc(50% - #{rem(80)});
+        padding: rem(35) rem(0) rem(35) rem(100);
+    }
 }
 
 .p-company__info dl:first-child {
@@ -35,18 +46,45 @@
     font-size: rem(12);
     font-weight: bold;
     line-height: 2;
+
+    @include mq(md) {
+        font-size: rem(20);
+        width: rem(180);
+    }
 }
 
 .p-company__info dd {
     width: calc(100% - #{rem(75)});
     font-size: rem(12);
     line-height: 2;
+
+    @include mq(md) {
+        font-size: rem(20);
+        width: calc(100% - #{rem(180)});
+    }
 }
 
 .p-company__map {
     position: relative;
     width: 100%;
     padding-top: 100%;
+
+    @include mq(md) {
+        position: absolute;
+        width: 50%;
+        top: 50%;
+        transform: translateY(-50%);
+        right: 0;
+        padding-top: 0;
+    }
+}
+
+.p-company__map-inner {
+    @include mq(md) {
+        position: relative;
+        width: 100%;
+        padding-top: 100%;
+    }
 }
 
 .p-company__map iframe {
