--- a/src/sass/object/project/_p-content.scss
+++ b/src/sass/object/project/_p-content.scss
@@ -4,18 +4,29 @@
 
 }
 
-.p-content__inner {
-
+.p-content__inner.l-inner {
+    @include mq(md) {
+        max-width: rem(1400);
+    }
 }
 
 .p-content__bigText {
     text-align: center;
     font-size: rem(25);
     font-weight: bold;
+
+    @include mq(md) {
+        font-size: rem(60);
+    }
 }
 
 .p-content__text {
     font-size: rem(13);
     line-height: 2;
     margin-top: rem(17);
+
+    @include mq(md) {
+        font-size: rem(26);
+        margin-top: rem(47);
+    }
 }
