--- a/src/sass/object/project/_p-form.scss
+++ b/src/sass/object/project/_p-form.scss
@@ -12,10 +12,19 @@
     text-align: center;
     font-size: rem(20);
     font-weight: bold;
+
+    @include mq(md) {
+        font-size: rem(40);
+    }
 }
 
 .p-form__main {
     margin-top: rem(70);
+
+    @include mq(md) {
+        max-width: rem(950);
+        margin: rem(140) auto 0;
+    }
 }
 
 .p-form__main dl {
@@ -24,6 +33,19 @@
 
 .p-form__main dl + dl {
     margin-top: rem(30);
+
+    @include mq(md) {
+        margin-top: rem(40);
+    }
+}
+
+.p-form__main dl:first-child dd,
+.p-form__main dl:nth-child(2) dd {
+    @include mq(md) {
+        display: grid;
+        gap: 0 rem(50);
+        grid-template-columns: repeat(2,1fr);
+    }
 }
 
 .p-form__main dt {
@@ -31,6 +53,10 @@
     align-items: center;
     font-size: rem(15);
     font-weight: bold;
+
+    @include mq(md) {
+        font-size: rem(18);
+    }
 }
 
 .p-form__main dt .hissu {
@@ -44,14 +70,37 @@
     border: 1px solid #ff0000;
     border-radius: rem(2);
     margin-left: rem(10);
+
+    @include mq(md) {
+        width: rem(44);
+        height: rem(20);
+    }
 }
 
 .p-form__main dt .ninni {
+    width: rem(30);
+    height: rem(15);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-size: rem(10);
+    color: #868686;
+    border: 1px solid #868686;
+    border-radius: rem(2);
+    margin-left: rem(10);
 
+    @include mq(md) {
+        width: rem(44);
+        height: rem(20);
+    }
 }
 
 .p-form__main dd {
     margin-top: rem(5);
+
+    @include mq(md) {
+        margin-top: rem(14);
+    }
 }
 
 .p-form__main dd input {
@@ -63,16 +112,29 @@
     font-size: rem(12);
     line-height: 1;
     padding:rem(12);
+
+    @include mq(md) {
+        font-size: rem(15);
+        padding: rem(20);
+    }
 }
 
 .p-form__main dd input::placeholder {
     color: #d2d2d2;
     font-size: rem(12);
     line-height: 1;
+
+    @include mq(md) {
+        font-size: rem(15);
+    }
 }
 
 .p-form__main dd input + input {
     margin-top: rem(15);
+
+    @include mq(md) {
+        margin-top: 0;
+    }
 }
 
 .p-form__main dd select {
@@ -83,6 +145,11 @@
     border: 1px solid #868686;
     border-radius: rem(2);
     background: url(../images/common/select_arrow.png) 96% 50%/0.5rem no-repeat;
+
+    @include mq(md) {
+        font-size: rem(15);
+        padding: rem(20);
+    }
 }
 
 .p-form__main dd textarea {
@@ -95,10 +162,25 @@
     font-size: rem(12);
     line-height: 1.25;
     padding:rem(12);
+
+    @include mq(md) {
+        font-size: rem(15);
+        padding: rem(20);
+        height: rem(180);
+    }
+}
+
+.p-form__main dl.harf dd input,
+.p-form__main dl.harf dd select {
+    max-width: rem(350);
 }
 
 .p-form__check {
     margin-top: rem(50);
+
+    @include mq(md) {
+        margin-top: rem(65);
+    }
 }
 
 .p-form__input {
@@ -113,6 +195,11 @@
     position: relative;
     font-size: rem(12);
     padding-left: rem(14);
+
+    @include mq(md) {
+        font-size: rem(20);
+        padding-left: rem(24);
+    }
 }
 
 .p-form__input span::before {
@@ -125,6 +212,11 @@
     top: 50%;
     transform: translateY(-50%);
     left: 0;
+
+    @include mq(md) {
+        width: rem(20);
+        height: rem(20);
+    }
 }
 
 .p-form__input span::after {
@@ -138,6 +230,12 @@
     left: rem(2);
     border-radius: rem(2);
     display: none;
+
+    @include mq(md) {
+        width: rem(14);
+        height: rem(14);
+        left: rem(3);
+    }
 }
 
 .p-form__input input:checked + span::after {
@@ -154,6 +252,11 @@
     max-width: rem(210);
     margin: 0 auto;
     margin-top: rem(50);
+
+    @include mq(md) {
+        max-width: rem(300);
+        margin-top: rem(65);
+    }
 }
 
 #form_submit::before {
@@ -175,4 +278,68 @@
 
 #form_submit input {
    
+}
+
+/* -- loading -------------------------------------------------------------------------------- */
+
+div.loading-layer {
+	width: 100vw;
+	height: 100vh;
+	background: rgba( 0, 0, 0, 0.7 );
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	z-index: 10000;
+}
+
+span.loading {
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	border-top: 5px solid rgba( 255, 255, 255, 0.2 );
+	border-right: 5px solid rgba( 255, 255, 255, 0.2 );
+	border-bottom: 5px solid rgba( 255, 255, 255, 0.2 );
+	border-left: 5px solid #ffffff;
+	-webkit-transform: translateZ( 0 );
+	-ms-transform: translateZ( 0 );
+	transform: translateZ( 0 );
+	-webkit-animation: load-circle 1.0s linear infinite;
+	animation: load-circle 1.0s linear infinite;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-top: -30px;
+	margin-left: -30px;
+}
+
+@-webkit-keyframes load-circle {
+	0% {
+		-webkit-transform: rotate( 0deg );
+		transform: rotate( 0deg );
+	}
+	100% {
+		-webkit-transform: rotate( 360deg );
+		transform: rotate( 360deg );
+	}
+}
+
+@keyframes load-circle {
+	0% {
+		-webkit-transform: rotate( 0deg );
+		transform: rotate( 0deg );
+	}
+	100% {
+		-webkit-transform: rotate( 360deg );
+		transform: rotate( 360deg );
+	}
+}
+
+/* -- error message -------------------------------------------------------------------------------- */
+
+.error_blank,
+.error_format,
+.error_match {
+	display: block;
+	color: #ff0000;
+	margin-top: 5px;
 }
