--- a/src/sass/object/project/_p-message.scss
+++ b/src/sass/object/project/_p-message.scss
@@ -4,24 +4,39 @@
 
 }
 
-.p-message__inner {
-
+.p-message__inner.l-inner {
+    @include mq(md) {
+        max-width: rem(1360);
+    }
 }
 
 .p-message__bigText {
     text-align: center;
     font-size: rem(40);
     line-height: 2;
+
+    @include mq(md) {
+        font-size: rem(70);
+    }
 }
 
 .p-message__units {
     display: grid;
     gap: rem(47);
     margin-top: rem(90);
+
+    @include mq(md) {
+        margin-top: rem(150);
+    }
 }
 
 .p-message__unit {
     counter-increment: number;
+
+    @include mq(md) {
+        display: flex;
+        align-items: center;
+    }
 }
 
 .p-message__unit::before {
@@ -38,6 +53,13 @@
     background-color: $yellow;
     border-radius: rem(5);
     margin: 0 auto;
+
+    @include mq(md) {
+        width: rem(70);
+        height: rem(70);
+        font-size: rem(50);
+        border-radius: rem(10);
+    }
 }
 
 .p-message__unit-text {
@@ -46,20 +68,43 @@
     font-weight: bold;
     line-height: calc(80/38);
     margin-top: rem(27);
+
+    @include mq(md) {
+        width: calc(100% - #{rem(70)});
+        padding-left: rem(35);
+        text-align: left;
+        font-size: rem(34);
+        margin-top: 0;
+        font-feature-settings: "palt";
+    }
 }
 
 .p-message__text {
     font-size: rem(15);
     line-height: 3;
     margin-top: rem(50);
+
+    @include mq(md) {
+        font-size: rem(24);
+        margin-top: rem(150);
+    }
 }
 
 .p-message__text span {
     display: block;
     text-align: right;
     font-weight: bold;
+
+    @include mq(md) {
+        font-size: rem(21);
+        margin-top: rem(100);
+    }
 }
 
 .p-message__text strong {
     font-size: rem(23);
+
+    @include mq(md) {
+        font-size: rem(30);
+    }
 }
