--- a/src/sass/object/project/_p-period.scss
+++ b/src/sass/object/project/_p-period.scss
@@ -4,8 +4,10 @@
 
 }
 
-.p-period__inner {
-
+.p-period__inner.l-inner {
+    @include mq(md) {
+        max-width: rem(1450);
+    }
 }
 
 .p-period__title {
@@ -16,12 +18,25 @@
     display: grid;
     gap: rem(90);
     margin-top: rem(70);
+
+    @include mq(md) {
+        gap: rem(284);
+        margin-top: rem(100);
+    }
 }
 
 .p-period__unit {
     position: relative;
     max-width: rem(300);
     margin: 0 auto;
+
+    @include mq(md) {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        max-width: rem(1300);
+        justify-content: flex-end;
+    }
 }
 
 .p-period__unit::before {
@@ -33,6 +48,12 @@
     left: 50%;
     transform: translateX(-50%);
     bottom: rem(-55);
+
+    @include mq(md) {
+        width: rem(110);
+        height: rem(50);
+        bottom: rem(-165);
+    }
 }
 
 .p-period__unit:last-child::before {
@@ -44,6 +65,11 @@
     font-family: $din;
     text-align: center;
     color: $yellow;
+
+    @include mq(md) {
+        width: rem(200);
+        font-size: rem(116);
+    }
 }
 
 .p-period__unit-title {
@@ -52,6 +78,13 @@
     font-weight: bold;
     text-align: center;
     margin-top: rem(25);
+
+    @include mq(md) {
+        width: rem(335);
+        font-size: rem(28);
+        text-align: left;
+        margin-top: 0;
+    }
 }
 
 .p-period__unit-title::before {
@@ -63,11 +96,29 @@
     left: 50%;
     transform: translateX(-50%);
     bottom: rem(-25);
+
+    @include mq(md) {
+        width: rem(3);
+        height: rem(120);
+        top: 50%;
+        transform: translateY(-50%);
+        right: 0;
+        left: initial;
+        bottom: initial;
+    }
 }
 
 .p-period__unit-text {
     line-height: 1.5;
     margin-top: rem(50);
+
+    @include mq(md) {
+        font-size: rem(22);
+        line-height: calc(46/22);
+        width: calc(100% - #{rem(335)} - #{rem(200)});
+        margin-top: 0;
+        padding-left: rem(50);
+    }
 }
 
 .p-period__unit-text p + p {
@@ -77,6 +128,10 @@
 .p-period__unit-text strong {
     display: inline-block;
     margin: rem(15) 0;
+
+    @include mq(md) {
+        margin: 0;
+    }
 }
 
 .p-period__unit-text span {
@@ -87,4 +142,11 @@
     font-size: rem(15);
     line-height: calc(52/30);
     margin-top: rem(75);
+
+    @include mq(md) {
+        max-width: rem(1300);
+        margin: 0 auto;
+        margin-top: rem(165);
+        font-size: rem(26);
+    }
 }
