--- a/src/sass/object/project/_p-point.scss
+++ b/src/sass/object/project/_p-point.scss
@@ -3,10 +3,18 @@
 .p-point {
     background-color: $yellow;
     padding: rem(50) 0;
+
+    @include mq(md) {
+        padding: rem(96) 0;
+    }
 }
 
 .p-point__inner.l-inner {
     padding: rem(0) rem(34);
+    @include mq(md) {
+        padding: 0 rem(25);
+        max-width: rem(1410);
+    }
 }
 
 .p-point__items {
@@ -14,6 +22,7 @@
     gap: rem(30);
     @include mq(md) {
         grid-template-columns: repeat(2,1fr);
+        gap: rem(65) rem(145);
     }
 }
 
@@ -21,18 +30,42 @@
     background-color: $white;
     border-radius: rem(15);
     padding: rem(15);
+
+    @include mq(md) {
+        padding: rem(30);
+        border-radius: rem(30);
+    }
 }
 
 .p-point__item-title {
     width: rem(100);
     height: rem(20);
     margin: 0 auto;
+
+    @include mq(md) {
+        width: rem(200);
+        height: rem(40);
+    }
 }
 
 .p-point__item-img {
     width: rem(140);
     margin: 0 auto;
     margin-top: rem(10);
+
+    @include mq(md) {
+        width: auto;
+        height: rem(240);
+    }
+}
+
+.p-point__item-img img {
+    @include mq(md) {
+        width: auto;
+        max-width: unset;
+        height: 100%;
+        margin: 0 auto;
+    }
 }
 
 .p-point__item-text {
@@ -40,4 +73,9 @@
     font-weight: bold;
     text-align: center;
     margin-top: rem(25);
+
+    @include mq(md) {
+        font-size: rem(34);
+        margin-top: rem(40);
+    }
 }
