--- a/src/sass/object/project/_p-subMV.scss
+++ b/src/sass/object/project/_p-subMV.scss
@@ -1,6 +1,6 @@
 @use 'global'as *;
 
-.p-subMV {
+.p-subMv {
 	position: relative;
 	width: 100%;
 	height: rem(312.5);
@@ -10,7 +10,7 @@
 	}
 }
 
-.p-subMV::after {
+.p-subMv::after {
 	position: absolute;
 	top: 0;
 	bottom: 0;
@@ -23,7 +23,7 @@
 	opacity: 0.4;
 }
 
-.p-subMV__text {
+.p-subMv__text {
 	position: absolute;
 	z-index: 3;
 	top: 38%;
@@ -42,7 +42,7 @@
 	}
 }
 
-.p-subMV__text::before {
+.p-subMv__text::before {
 	content: attr(data-ja);
 	display: inline-block;
 	width: 100%;
