--- a/src/sass/object/project/_p-thanks.scss
+++ b/src/sass/object/project/_p-thanks.scss
@@ -13,12 +13,20 @@
     text-align: center;
     font-feature-settings: "palt";
     line-height: 1.5;
+
+    @include mq(md) {
+        font-size: rem(18);
+    }
 }
 
 .p-thanks__btn {
     max-width: rem(250);
     margin: 0 auto;
     margin-top: rem(60);
+
+    @include mq(md) {
+        max-width: rem(350);
+    }
 }
 
 .p-thanks__img {
@@ -26,4 +34,9 @@
     margin: 0 auto;
     margin-top: rem(46);
     animation: carMotion 5s linear infinite;
+
+    @include mq(md) {
+        width: rem(210);
+        margin-top: rem(60);
+    }
 }
