--- a/src/sass/object/project/_p-worklife.scss
+++ b/src/sass/object/project/_p-worklife.scss
@@ -4,14 +4,21 @@
 
 }
 
-.p-worklife__inner {
-
+.p-worklife__inner.l-inner {
+    @include mq(md) {
+        max-width: rem(1550);
+    }
 }
 
 .p-worklife__subtitle {
     width: rem(150);
     height: rem(23);
     margin: 0 auto;
+
+    @include mq(md) {
+        width: rem(250);
+        height: rem(36);
+    }
 }
 
 .p-worklife__title {
@@ -24,14 +31,35 @@
     font-weight: bold;
     line-height: 2;
     margin-top: rem(48);
+
+    @include mq(md) {
+        font-size: rem(30);
+    }
 }
 
 .p-workelife__content {
     margin-top: rem(75);
+
+    @include mq(md) {
+        display: flex;
+        align-items: center;
+        position: relative;
+        border: rem(5) solid $black;
+        border-radius: rem(30);
+        margin-top: rem(100);
+        height: rem(560);
+        padding: 0 rem(30);
+    }
 }
 
 .p-worklife__figure {
-
+    @include mq(md) {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        width: 48%;
+    }
 }
 
 .p-worklife__units {
@@ -39,6 +67,11 @@
     grid-template-columns: repeat(2,1fr);
     gap: rem(15);
     margin-top: rem(27);
+
+    @include mq(md) {
+        width: 100%;
+        gap: rem(836);
+    }
 }
 
 .p-worklife__unit {
@@ -49,13 +82,26 @@
     border-radius: rem(5);
     border: rem(2) solid $black;
     padding: rem(8) 0;
+
+    @include mq(md) {
+        font-size: rem(20);
+        border-radius: rem(10);
+        padding: rem(24) rem(5);   
+        border-width: 2px; 
+    }
 }
 
 .p-worklife__img {
     width: rem(120);
     margin: 0 auto;
     margin-top: rem(46);
-    animation: carMotion 5s linear infinite;
+    animation: carMotion 3s linear infinite;
+
+    @include mq(md) {
+        width: rem(210);
+        animation-duration: 5s;
+        margin-top: rem(85);
+    }
 }
 
 @keyframes carMotion {
